<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:gravity="center_horizontal" >

    <EditText
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content"
        android:hint="@string/txt_firstName"/>

    <EditText
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content"
        android:hint="@string/txt_lastName"/>

    <EditText
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content"
        android:hint="@string/email_char"/>

    <EditText
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content"
        android:hint="@string/txt_password"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content"
        android:hint="@string/phone_num"
        android:inputType="phone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_Account"
        android:id="@+id/btnCreateAccount"
        android:textSize="@dimen/buttons"

        />



</LinearLayout>
